# translation

./: package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clip.rs  command.rs  main.rs  text_selection.rs
src/components/: GrammarFeedback.tsx
src/services/: chatgpt.ts
