[package]
name = "translation"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.2"
clipboard-master = "3.1"
tauri-plugin-opener = "2"
enigo = { version = "0.2.0", features = [ "xdo" ] }
active-win-pos-rs = "0.8"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-shell = "2.0.0"
clipboard = "0.5.0"

selection = "1.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
